--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="project4web.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Build your Home</title>
 </head>
 <body>
