Now ready to commit

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     <h3>Projects</h3>
 <div class="row">
    <div class="col-4">
-       <img src="./../images/summerhouse.jpg" alt="summerhouse" width="300px">
+       <img src="./Images/summerhouse.jpg" alt="summerhouse" width="300px">
        <div class="desc">Summer House </div>
    </div>
 
    <div class="col-4">
-    <img src="./../images/Barnhouse'.jpg" alt="Barnhouse" width="300px">
+    <img src="./Images/Barnhouse'.jpg" alt="Barnhouse" width="300px">
     <div class="desc">Barn House </div>
 </div>
 
 <div class="col-4">
-    <img src="./../images/Brickhouse.jpg" alt="Brickhouse" width="300px">
+    <img src="./Images/Brickhouse.jpg" alt="Brickhouse" width="300px">
     <div class="desc">Brick House </div>
 </div>
 
 <div class="col-4">
-    <img src="./../images/renovated2.jpg" alt="renovatedhouse" width="300px">
+    <img src="./Images/renovated2.jpg" alt="renovatedhouse" width="300px">
     <div class="desc">Renovated House </div>
 </div>
 </div>
@@ -68,7 +68,7 @@
     <div class="row1">
         
         <div class="col4">
-            <img src="./../images/mem1.jpg" alt="mem1" width="300px">
+            <img src="./Images/mem1.jpg" alt="mem1" width="300px">
             <div class="des">
                 <h2>John Doe</h2>
                 <h5>CEO, Founder</h5>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="col4">
-            <img src="./../images/mem2.jpg" alt="mem2" width="300px">
+            <img src="./Images/mem2.jpg" alt="mem2" width="300px">
             <div class="des">
                 <h2>John Doe</h2>
                 <h5>Architect</h5>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="col4">
-            <img src="./../images/mem3.jpg" alt="mem3" width="300px">
+            <img src="./Images/mem3.jpg" alt="mem3" width="300px">
             <div class="des">
                 <h2>John Doe</h2>
                 <h5>Architect</h5>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="col4">
-            <img src="./../images/mem4.jpg" alt="mem4" width="300px">
+            <img src="./Images/mem4.jpg" alt="mem4" width="300px">
             <div class="des">
                 <h2>John Doe</h2>
                 <h5>Architect</h5>
@@ -125,7 +125,7 @@
 </form>
 <br> <br> <br>
 <div class="lastslider">
-    <img src="./../images/road.jpg" alt="Roadmap">
+    <img src="./Images/road.jpg" alt="Roadmap">
 </div>
 
 <!-- Footer  -->
